// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Program /> > categories > applies categories to index help 1`] = `
"
Boost v1.2.3 [90mboost[39m

[1m[47m[30m COMMANDS [39m[49m[22m

 qux  Description

 [1mBottom[22m
 foo  Description

 [1mTop[22m
 bar  Description

 [1mGlobal[22m
 baz  Description
"
`;

exports[`<Program /> > components > renders and outputs multiple component renders 1`] = `
"Before
Foo[36mlevelInfo[39m Middle
BarBaz[31mlevelError[39m After
"
`;

exports[`<Program /> > default command > executes default when no args passed 1`] = `
"Build!
"
`;

exports[`<Program /> > default command > renders commands when no args passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[1m[47m[30m COMMANDS [39m[49m[22m

 build        Build a project
"
`;

exports[`<Program /> > error > renders a thrown error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Fail
"
`;

exports[`<Program /> > errors for invalid version format 1`] = `
[OptimalError: The following validations have failed for \`Program\`:
  - Invalid field "version". String does not match. (pattern "^(0|[1-9]\\d*)\\.(0|[1-9]\\d*)\\.(0|[1-9]\\d*)(?:-((?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\\.(?:0|[1-9]\\d*|\\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\\+([0-9a-zA-Z-]+(?:\\.[0-9a-zA-Z-]+)*))?$")]
`;

exports[`<Program /> > errors if bin is not kebab case 1`] = `
[OptimalError: The following validations have failed for \`Program\`:
  - Invalid field "bin". String must be in kebab case. (pattern "^[a-z][a-z0-9-]+$")]
`;

exports[`<Program /> > exit > renders a non-zero exit 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > exit > renders a non-zero exit with component 1`] = `"Content"`;

exports[`<Program /> > exit > renders a zero exit 1`] = `
"Before
"
`;

exports[`<Program /> > exit > renders a zero exit with a component 1`] = `"Content"`;

exports[`<Program /> > failure > renders if an error is thrown 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders when args parsing fails 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders when invalid command name passed 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders when misspelt command name passed 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders when no commands could be found 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders when no commands have been registered 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > failure > renders with custom exit error 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > help > outputs help for a nested sub-command 1`] = `
"
[1m[47m[30m CLIENT:BUILD [39m[49m[22m

 Build a project

[1m[47m[30m USAGE [39m[49m[22m

 $ build -S ./src -D ./lib

[1m[47m[30m OPTIONS [39m[49m[22m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path (default: "./src")

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for a nested sub-command 2`] = `
"
[1m[47m[30m CLIENT:INSTALL [39m[49m[22m

 Install package(s) [90m[deprecated][39m

[1m[47m[30m PARAMS [39m[49m[22m

 pkg [90mstring[39m  Package name [90m[required][39m
 …pkgs [90mstring[][39m

[1m[47m[30m OPTIONS [39m[49m[22m

 [1mSpecial[22m
     --no-save        Save dependency to lock file (default: true)

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for a nested sub-command 3`] = `
"
[1m[47m[30m CLIENT [39m[49m[22m

 Client

[1m[47m[30m USAGE [39m[49m[22m

 $ client:install @foo/bar
 $ client:build

[1m[47m[30m COMMANDS [39m[49m[22m

 client:uninstall [90mpkg[39m  Install package(s) [90m[deprecated][39m

 [1mBuild[22m
 client:build          Build a project

[1m[47m[30m OPTIONS [39m[49m[22m

 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for a specific command 1`] = `
"
[1m[47m[30m BUILD [39m[49m[22m

 Build a project

[1m[47m[30m USAGE [39m[49m[22m

 $ build -S ./src -D ./lib

[1m[47m[30m OPTIONS [39m[49m[22m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path (default: "./src")

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for a specific command 2`] = `
"
[1m[47m[30m INSTALL [39m[49m[22m

 Install package(s) [90m[deprecated][39m

[1m[47m[30m PARAMS [39m[49m[22m

 pkg [90mstring[39m  Package name [90m[required][39m
 …pkgs [90mstring[][39m

[1m[47m[30m OPTIONS [39m[49m[22m

 [1mSpecial[22m
     --no-save        Save dependency to lock file (default: true)

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for an aliased command 1`] = `
"
[1m[47m[30m BUILD [39m[49m[22m

 Build a project

[1m[47m[30m USAGE [39m[49m[22m

 $ build -S ./src -D ./lib

[1m[47m[30m OPTIONS [39m[49m[22m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path (default: "./src")

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help for an aliased command 2`] = `
"
[1m[47m[30m BUILD [39m[49m[22m

 Build a project

[1m[47m[30m USAGE [39m[49m[22m

 $ build -S ./src -D ./lib

[1m[47m[30m OPTIONS [39m[49m[22m

 -D, --dst [90mstring[39m     Destination path
 -S, --src [90mstring[39m     Source path (default: "./src")

 [1mGlobal[22m
 -h, --help           Display help and usage menu
     --locale [90mstring[39m  Display output in the chosen locale (default: "en")
 -v, --version        Display version number"
`;

exports[`<Program /> > help > outputs help when \`--help\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[1m[47m[30m BOOST [39m[49m[22m

 Description

[1m[47m[30m PARAMS [39m[49m[22m

 0 [90mstring[39m     Complex param with many tags. [90m[deprecated, required][39m
 path [90mstring[39m  This is a string param thats required. [90m[required][39m
 ms [90mnumber[39m    And this a number param with a label.
 3 [90mboolean[39m    And finally a boolean param. [90m[deprecated][39m

[1m[47m[30m OPTIONS [39m[49m[22m

     --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
     --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with
                                             custom label. [90m[deprecated][39m
     --flag                                  Standard boolean option.
     --num [90mnumber[39m                            Standard number option.
 -C, --numberCountable [90mnumber[39m                Number option that increments a
                                             count for each occurence. (default:
                                              10) [90m[counter][39m
 -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from.
                                             (choices: 1, 2, 3, 4, 5, 6, 7, 8,
                                             9, 10) [90m[deprecated][39m
     --numWithArity [90mnumber[][39m                 A multiple number option that
                                             requires an exact number of values.
                                              [90m[multiple(10)][39m
     --str [90mstring[39m                            Standard string option.
 -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices:
                                              "foo", "bar", "baz") (default:
                                             "bar")
 -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
 -t, --no-truthyBool                         Flag that is on by default, so name
                                              should be negated. (default: true)

 [1mGlobal[22m
 -h, --help                                  Display help and usage menu
     --locale [90mstring[39m                         Display output in the chosen locale
                                              (default: "en")
 -v, --version                               Display version number
"
`;

exports[`<Program /> > help > outputs help when \`-h\` is passed 1`] = `
"
Boost v1.2.3 [90mboost[39m

[1m[47m[30m BOOST [39m[49m[22m

 Description

[1m[47m[30m PARAMS [39m[49m[22m

 0 [90mstring[39m     Complex param with many tags. [90m[deprecated, required][39m
 path [90mstring[39m  This is a string param thats required. [90m[required][39m
 ms [90mnumber[39m    And this a number param with a label.
 3 [90mboolean[39m    And finally a boolean param. [90m[deprecated][39m

[1m[47m[30m OPTIONS [39m[49m[22m

     --deprecatedFlag                        A deprecated flag. [90m[deprecated][39m
     --deprecatedStringWithALongName [90mstring[39m  Deprecated string option with
                                             custom label. [90m[deprecated][39m
     --flag                                  Standard boolean option.
     --num [90mnumber[39m                            Standard number option.
 -C, --numberCountable [90mnumber[39m                Number option that increments a
                                             count for each occurence. (default:
                                              10) [90m[counter][39m
 -n, --numberFixedList [90mnumber[39m                A list of numbers to choose from.
                                             (choices: 1, 2, 3, 4, 5, 6, 7, 8,
                                             9, 10) [90m[deprecated][39m
     --numWithArity [90mnumber[][39m                 A multiple number option that
                                             requires an exact number of values.
                                              [90m[multiple(10)][39m
     --str [90mstring[39m                            Standard string option.
 -s, --stringChoices [90mstring[39m                  Choice list with strings. (choices:
                                              "foo", "bar", "baz") (default:
                                             "bar")
 -S, --strList [90mstring[][39m                      String option list. [90m[multiple][39m
 -t, --no-truthyBool                         Flag that is on by default, so name
                                              should be negated. (default: true)

 [1mGlobal[22m
 -h, --help                                  Display help and usage menu
     --locale [90mstring[39m                         Display output in the chosen locale
                                              (default: "en")
 -v, --version                               Display version number
"
`;

exports[`<Program /> > locale > errors for invalid \`--locale\` 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > logging > handles logging when rendering a component 1`] = `
"Log
[90mlevelDebug[39m Debug
[36mlevelInfo[39m Info
Component log
Returned from component![33mlevelWarn[39m Warn
[31mlevelError[39m Error
[35mlevelTrace[39m Trace
[31mlevelError[39m Component error
"
`;

exports[`<Program /> > logging > handles logging when returning a string 1`] = `
"Log
[90mlevelDebug[39m Debug
[36mlevelInfo[39m Info
Returned from command!
[33mlevelWarn[39m Warn
[31mlevelError[39m Error
[35mlevelTrace[39m Trace
"
`;

exports[`<Program /> > nested programs > bubbles up errors 1`] = `
"
[1m[41m[30m ERROR [39m[49m[22m

 Cannot read properties of undefined (reading 'columns')
"
`;

exports[`<Program /> > nested programs > can run a program within a command 1`] = `
"Before run
Install!
After run
Return
"
`;

exports[`<Program /> > success > can return an element that writes with ink 1`] = `"Hello!"`;

exports[`<Program /> > tasks > can run a task within a task 1`] = `
"Test
Hi
2
[31mlevelError[39m Bye
"
`;

exports[`<Program /> > tasks > runs a sync task correctly 1`] = `
"Hi
15
[31mlevelError[39m Bye
"
`;

exports[`<Program /> > tasks > runs an async task correctly 1`] = `
"bazfooBAR
"
`;

exports[`<Program /> > version > outputs version when \`--version\` is passed 1`] = `
"1.2.3
"
`;

exports[`<Program /> > version > outputs version when \`-v\` is passed 1`] = `
"1.2.3
"
`;
